# rust-agentic-framework

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  config.toml  docker-compose.yml  mise.toml
.claude/: settings.local.json
.claude/commands/: generate-code-review.md  generate-github-issues.md  generate-issue-prompts.md  generate-missing-tests.md  update-readme.md
.cursor/rules/: debugging.mdc  general.mdc
.github/: copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/chatmodes/: databaseadmin.chatmode.md
.github/prompts/: bug_report.prompt.md  explain_issue.prompt.md  feature_request.prompt.md  feature_request_prompt.md  fix_issue.prompt.md  implement_issue.prompt.md
.github/workflows/: ci.yml
.junie/: guidelines.md
crates/agentic-core/: Cargo.toml
crates/agentic-core/src/: config.rs  lib.rs  session.rs
crates/db_migrations/: Cargo.toml
crates/db_migrations/migrations/: V1__initial_schema.sql  V2__vector_optimizations.sql
crates/db_migrations/src/: lib.rs
crates/db_migrations/tests/: integration_tests.rs
crates/embeddings/: Cargo.toml
crates/embeddings/src/: bedrock_cohere.rs  bedrock_common.rs  bedrock_titan.rs  chunker.rs  cohere.rs  config.rs  fallback.rs  lib.rs
crates/llm/: Cargo.toml
crates/llm/src/: bedrock.rs  lib.rs  models.rs
crates/server/: Cargo.toml
crates/server/src/: agent.rs  config.rs  errors.rs  lib.rs  main.rs  models.rs  sse.rs
crates/server/tests/: integration_tests.rs
crates/store/: Cargo.toml
crates/store/src/: migrations.rs  models.rs  session_store.rs  store.rs
crates/store/tests/: integration_tests.rs
crates/tooling/: Cargo.toml
crates/tooling/src/: file_summarizer.rs  lib.rs  registry.rs  tool.rs
crates/vector_store/: Cargo.toml
crates/vector_store/src/: lib.rs  models.rs  store.rs
crates/vector_store/tests/: integration_tests.rs
documents/: hr_policy.txt  tech_guidelines.txt
specs/: prompt_plan.md  rust_agentic_platform_specs.md  todo.md
sql/: init.sql
web_gui/: README.md  index.html  package-lock.json  package.json  test.html  vite.config.ts
web_gui/public/: index.html
web_gui/src/: App.tsx
web_gui/src/components/: ChatBot.tsx  ChatMessage.tsx  MessageInput.tsx
web_gui/src/services/: apiService.ts
web_gui/src/styles/: ChatBot.css
web_gui/src/types/: index.ts
