[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
anyhow = "1.0"
thiserror = "1.0"
toml = "0.8"
axum = "0.7"
tower = "0.5"
hyper = "1.0"
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
