[package]
name = "db_migrations"
version = "0.1.0"
edition = "2021"

[dependencies]
agentic-core = { path = "../agentic-core" }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }
refinery = { version = "0.8", features = ["tokio-postgres"] }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tokio-postgres = "0.7"

[dev-dependencies]
tokio-test = "0.4"
