[package]
name = "embeddings"
version = "0.1.0"
edition = "2021"

[dependencies]
agentic-core = { path = "../agentic-core" }
tokio = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
aws-sdk-bedrockruntime = "1.0"
aws-config = "1.0"
aws-types = "1.0"
tracing = "0.1"

[dev-dependencies]
tokio-test = "0.4"
tracing-subscriber = "0.3"
