[package]
name = "llm"
version = "0.1.0"
edition = "2021"

[dependencies]
agentic-core = { path = "../agentic-core" }
tokio = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = "1.0"
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"

# AWS SDK dependencies
aws-config = "1.1.7"
aws-sdk-bedrockruntime = "1.15.0"
aws-smithy-runtime-api = "1.1.7"
async-stream = "0.3"

[dev-dependencies]
tokio-test = "0.4"
