[package]
name = "server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
agentic-core = { path = "../agentic-core" }
embeddings = { path = "../embeddings" }
vector_store = { path = "../vector_store" }
llm = { path = "../llm" }
tooling = { path = "../tooling" }
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
serde_json = "1.0"
futures = { workspace = true }
serde = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
thiserror = "1.0"
toml = { workspace = true }
env_logger = "0.11.8"
log = "0.4.27"
tracing-subscriber = "0.3.19"
async-stream = "0.3"

[dev-dependencies]
hyper = { workspace = true }
tower = { workspace = true, features = ["util"] }
tempfile = "3.8"
