[package]
name = "tooling"
version = "0.1.0"
edition = "2021"

[dependencies]
agentic-core = { path = "../agentic-core" }
tokio = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = "1.0"
async-trait = "0.1"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.0"